WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56417
[Qt][Symbian][WK2] Fix exporting and importing WebProcessMainQt
https://bugs.webkit.org/show_bug.cgi?id=56417
Summary
[Qt][Symbian][WK2] Fix exporting and importing WebProcessMainQt
Laszlo Gombos
Reported
2011-03-15 14:48:51 PDT
Both in WebKit2/qt/MainQt.cpp and in WebKit2/WebProcess/qt/WebProcessMainQt.cpp QWEBKIT_EXPORT is defined to an empty string; so the WebProcessMainQt symbol does not get properly exported/imported. This is likely not only a problem on Symbian/RVCT but on Windows/MSVC as well.
Attachments
fix to land for cq+
(2.11 KB, patch)
2011-03-15 15:00 PDT
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2011-03-15 15:00:17 PDT
Created
attachment 85861
[details]
fix to land for cq+ Fix looks good to me, r+.
WebKit Commit Bot
Comment 2
2011-03-15 15:55:24 PDT
Comment on
attachment 85861
[details]
fix to land for cq+ Clearing flags on attachment: 85861 Committed
r81186
: <
http://trac.webkit.org/changeset/81186
>
WebKit Commit Bot
Comment 3
2011-03-15 15:55:29 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4
2011-03-15 23:56:44 PDT
http://trac.webkit.org/changeset/81186
might have broken WinCE Release (Build)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug